kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: leadscan
  labels:
    name: leadscan
